Prevent labels with tooltips from misaligning adjacent fields

--- a/src/styles/components/multiple-form.less
+++ b/src/styles/components/multiple-form.less
@@ -237,7 +237,12 @@ base/forms.less
     }
 
     label {
+      line-height: @icon-mini-height;
       white-space: nowrap;
+
+      svg {
+        display: block;
+      }
     }
 
     .modal-header {
